--- a/sass/secundarios/_contact.scss
+++ b/sass/secundarios/_contact.scss
@@ -1,5 +1,3 @@
-
-
 /*estilo de contact*/
 .main {
     display: flex;
@@ -33,19 +31,21 @@
         }
 
         .main__caja__bot {
+            margin: 0rem;
+            @include tb($medida-1,$medida-2);
             width: 100%;
             display: grid;
-            margin-left: 2%;
+            justify-items: center;
             row-gap: $medida-1;
             grid-template-areas:
-                "reset envia";
+                "rese envia";
 
-            .reset {
-                grid-area: reset;
+            .rese {
+                grid-area: rese;
                 @extend %bot;
             }
 
-            .submit {
+            .submi {
                 grid-area: envia;
                 align-self: flex-end;
                 @extend %bot;
@@ -54,14 +54,30 @@
 
     }
 }
-/*estilos de las mediaqueries*/
+
+/*estilos de las mediaqueries tablet*/
 @media screen and (min-width:576px) {
     .main {
         .main__caja {
-            margin: 8rem;
+
             .main__caja__bot {
-                margin-left: 12%;
+                .rese{
+                    @extend %bott;
+                }
+
+                .submi {
+                    @extend %bott;
+                }
             }
+        }
+    }
+}
+
+/*estilos de las mediaqueries desktop*/
+@media screen and (min-width:1000px) {
+    .main {
+        .main__caja {
+            margin: 8rem;
         }
     }
 }
