--- a/sass/secundarios/_footer.scss
+++ b/sass/secundarios/_footer.scss
@@ -1,4 +1,3 @@
-
 /* estilo del footer */
 .footer {
     display: flex;
@@ -9,19 +8,27 @@
     margin-top: $medida-1;
     color: white;
     gap: 0.6rem;
+
     .footer__subt {
-        font-size: $medida-1 +$medida-05;
+        font-family: Futura,sans-serif;
+        font-size: $medida-2;
         font-weight: bold;
     }
+
+    p {
+        @extend %prol;
+        font-size: $medida-1 + 0.125rem;
+    }
+
     div {
         margin-bottom: $medida-1;
-        a{
+
+        a {
             margin: $medida-05;
         }
     }
-    img{
-        @include sizes($medida-2 + $medida-025,$medida-2)
-    }    
+
+    img {
+        @include sizes($medida-2 + 0.125rem, $medida-2)
+    }
 }
-
-
