--- a/sass/secundarios/_index.scss
+++ b/sass/secundarios/_index.scss
@@ -28,14 +28,16 @@
         z-index: 2;
         height: 10rem;
         margin-bottom: $medida-2;
-
+        padding-left: $medida-2;
+        padding-right: $medida-2;
         img {
             margin-top: 6rem;
             z-index: 2;
-            @include sizes(40%, 7rem);
+            @include sizes(45%, 7rem);
         }
 
         p {
+            padding-top: $medida-2;
             background: -webkit-linear-gradient(nth($colores, 3), nth($colores, 8));
             background-clip: text;
             -webkit-background-clip: text;
@@ -178,9 +180,6 @@ hr {
             }
         }
     }
-
-
-
     hr {
         @include tb(8rem, 8rem);
     }
