--- a/sass/secundarios/_nav.scss
+++ b/sass/secundarios/_nav.scss
@@ -1,39 +1,47 @@
-
-
 /* estilos del nav */
-.body header nav{
+.body header nav {
     background-color: nth($colores, 1);
     text-align: center;
     text-transform: uppercase;
+
     .boton {
         background-color: nth($colores, 5);
         @include sizes(3rem, $medida-2);
         border: 4px solid nth($colores, 7);
-        &:active{
-            transform: scale(1.2);
-        }
-        img{
+        @extend %act;
+        img {
             @include sizes($medida-2, $medida-1);
             margin-bottom: 0.15rem;
         }
     }
-    .desk li {
-        @extend %nav;
+
+    .desk {
+        margin-left:-8rem;
+        li {
+            @extend %nav;
+        }
     }
+    
+
     div {
         a img {
             @include sizes(8rem, 4rem);
+            @extend %act;
         }
     }
+
     .buscbot {
         background-color: nth($colores, 1);
+
         .buscbot__phone li {
             @extend %nav;
         }
     }
 }
+
 /* estilos de la mediaquerie */
 @media screen and (min-width:576px) {
+
     /*estilos del nav*/
     #a {
         font-size: $medida-1;
@@ -46,5 +54,5 @@
     .boton {
         display: none;
     }
-    
+
 }
